<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.kaistcampusv2.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_facilities"
        android:name="com.example.kaistcampusv2.ui.facilities.FacilitiesFragment"
        android:label="@string/title_facilities"
        tools:layout="@layout/fragment_facilities" />
    <fragment
        android:id="@+id/navigation_map"
        android:name="com.example.kaistcampusv2.ui.map.MapFragment"
        android:label="@string/title_map"
        tools:layout="@layout/fragment_map" />

    <fragment
        android:id="@+id/navigation_info"
        android:name="com.example.kaistcampusv2.ui.info.InfoFragment"
        android:label="@string/title_info"
        tools:layout="@layout/fragment_info" />
</navigation>