<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <Button
        android:id="@+id/checklist_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="5dp"
        android:background="#00FFFFFF"
        android:drawableTop="@drawable/ic_checklist"
        android:text="@string/checklist_button"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimary"
        android:textSize="14sp"
        android:textStyle="normal|bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.165"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.022" />

    <Button
        android:id="@+id/contact_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/Transparent"
        android:drawableTop="@drawable/ic_letter"
        android:text="@string/contact_button"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimary"
        android:textSize="14sp"
        android:textStyle="normal|bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.823"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.072" />

    <Button
        android:id="@+id/korea_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/Transparent"
        android:drawableTop="@drawable/ic_south_korea"
        android:text="@string/korea_button"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimary"
        android:textSize="14sp"
        android:textStyle="normal|bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.174"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.319" />

    <Button
        android:id="@+id/dormitory_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/Transparent"
        android:drawableTop="@drawable/ic_dormitory"
        android:text="@string/dormitory_button"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimary"
        android:textSize="14sp"
        android:textStyle="normal|bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.812"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.319" />

    <Button
        android:id="@+id/internet_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/Transparent"
        android:drawableTop="@drawable/ic_internet"
        android:text="@string/intranet_button"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimary"
        android:textSize="12sp"
        android:textStyle="normal|bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.174"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.588" />

    <Button
        android:id="@+id/academic_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/Transparent"
        android:drawableTop="@drawable/ic_academic_circular"
        android:text="@string/academic_button"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimary"
        android:textStyle="normal|bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.812"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.588" />

    <Button
        android:id="@+id/faq_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/Transparent"
        android:drawableTop="@drawable/ic_faq"
        android:text="@string/faq_button"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimary"
        android:textStyle="normal|bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.793"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.855" />

    <Button
        android:id="@+id/immigration_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/Transparent"
        android:drawableTop="@drawable/ic_worldwide"
        android:text="@string/immigration_button"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimary"
        android:textStyle="normal|bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.174"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.844" />



</androidx.constraintlayout.widget.ConstraintLayout>